# codingame-the-labyrinth

./: Cargo.toml  README.md  build.rs  git-subtrees-update
.github/workflows/: ci.yml
src/: core.rs  entrypoint.rs  error.rs  input.rs  lib.rs  sqrid.rs
tests/: the-labyrinth-tests.rs
