[package]
name = "the-labyrinth"
version = "0.0.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
build = "build.rs"
edition = "2018"

[lib]
doctest = false

[build-dependencies]
rustsourcebundler = "0.10.2"
# rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler", branch = "devel" }

[dependencies]
itertools = "0.10.5"
libc = "0.2.139"
rand = "0.8.5"
regex = "1.7.1"
# time = "0.2.26"

[dev-dependencies]
anyhow = "1"

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["clock"]

